// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Changing month should return the correct data structure 1`] = `
"{
  \\"months\\": [
    {
      \\"currentMonth\\": 2,
      \\"currentYear\\": 2020,
      \\"weeks\\": [
        [
          {},
          {},
          {},
          {},
          {},
          {},
          {
            \\"day\\": 1,
            \\"date\\": \\"2020-03-01T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 2,
            \\"date\\": \\"2020-03-02T00:00:00.000Z\\"
          },
          {
            \\"day\\": 3,
            \\"date\\": \\"2020-03-03T00:00:00.000Z\\"
          },
          {
            \\"day\\": 4,
            \\"date\\": \\"2020-03-04T00:00:00.000Z\\"
          },
          {
            \\"day\\": 5,
            \\"date\\": \\"2020-03-05T00:00:00.000Z\\"
          },
          {
            \\"day\\": 6,
            \\"date\\": \\"2020-03-06T00:00:00.000Z\\"
          },
          {
            \\"day\\": 7,
            \\"date\\": \\"2020-03-07T00:00:00.000Z\\"
          },
          {
            \\"day\\": 8,
            \\"date\\": \\"2020-03-08T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 9,
            \\"date\\": \\"2020-03-09T00:00:00.000Z\\"
          },
          {
            \\"day\\": 10,
            \\"date\\": \\"2020-03-10T00:00:00.000Z\\"
          },
          {
            \\"day\\": 11,
            \\"date\\": \\"2020-03-11T00:00:00.000Z\\"
          },
          {
            \\"day\\": 12,
            \\"date\\": \\"2020-03-12T00:00:00.000Z\\"
          },
          {
            \\"day\\": 13,
            \\"date\\": \\"2020-03-13T00:00:00.000Z\\"
          },
          {
            \\"day\\": 14,
            \\"date\\": \\"2020-03-14T00:00:00.000Z\\"
          },
          {
            \\"day\\": 15,
            \\"date\\": \\"2020-03-15T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 16,
            \\"date\\": \\"2020-03-16T00:00:00.000Z\\"
          },
          {
            \\"day\\": 17,
            \\"date\\": \\"2020-03-17T00:00:00.000Z\\"
          },
          {
            \\"day\\": 18,
            \\"date\\": \\"2020-03-18T00:00:00.000Z\\"
          },
          {
            \\"day\\": 19,
            \\"date\\": \\"2020-03-19T00:00:00.000Z\\"
          },
          {
            \\"day\\": 20,
            \\"date\\": \\"2020-03-20T00:00:00.000Z\\"
          },
          {
            \\"day\\": 21,
            \\"date\\": \\"2020-03-21T00:00:00.000Z\\"
          },
          {
            \\"day\\": 22,
            \\"date\\": \\"2020-03-22T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 23,
            \\"date\\": \\"2020-03-23T00:00:00.000Z\\"
          },
          {
            \\"day\\": 24,
            \\"date\\": \\"2020-03-24T00:00:00.000Z\\"
          },
          {
            \\"day\\": 25,
            \\"date\\": \\"2020-03-25T00:00:00.000Z\\"
          },
          {
            \\"day\\": 26,
            \\"date\\": \\"2020-03-26T00:00:00.000Z\\"
          },
          {
            \\"day\\": 27,
            \\"date\\": \\"2020-03-27T00:00:00.000Z\\"
          },
          {
            \\"day\\": 28,
            \\"date\\": \\"2020-03-28T00:00:00.000Z\\"
          },
          {
            \\"day\\": 29,
            \\"date\\": \\"2020-03-29T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 30,
            \\"date\\": \\"2020-03-29T23:00:00.000Z\\"
          },
          {
            \\"day\\": 31,
            \\"date\\": \\"2020-03-30T23:00:00.000Z\\"
          },
          {},
          {},
          {},
          {},
          {}
        ]
      ]
    }
  ],
  \\"currentMonth\\": 2,
  \\"currentYear\\": 2020,
  \\"selectedDate\\": \\"2020-10-15T23:00:00.000Z\\"
}"
`;

exports[`Changing year should return the correct data structure 1`] = `
"{
  \\"months\\": [
    {
      \\"currentMonth\\": 9,
      \\"currentYear\\": 1987,
      \\"weeks\\": [
        [
          {},
          {},
          {},
          {
            \\"day\\": 1,
            \\"date\\": \\"1987-09-30T23:00:00.000Z\\"
          },
          {
            \\"day\\": 2,
            \\"date\\": \\"1987-10-01T23:00:00.000Z\\"
          },
          {
            \\"day\\": 3,
            \\"date\\": \\"1987-10-02T23:00:00.000Z\\"
          },
          {
            \\"day\\": 4,
            \\"date\\": \\"1987-10-03T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 5,
            \\"date\\": \\"1987-10-04T23:00:00.000Z\\"
          },
          {
            \\"day\\": 6,
            \\"date\\": \\"1987-10-05T23:00:00.000Z\\"
          },
          {
            \\"day\\": 7,
            \\"date\\": \\"1987-10-06T23:00:00.000Z\\"
          },
          {
            \\"day\\": 8,
            \\"date\\": \\"1987-10-07T23:00:00.000Z\\"
          },
          {
            \\"day\\": 9,
            \\"date\\": \\"1987-10-08T23:00:00.000Z\\"
          },
          {
            \\"day\\": 10,
            \\"date\\": \\"1987-10-09T23:00:00.000Z\\"
          },
          {
            \\"day\\": 11,
            \\"date\\": \\"1987-10-10T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 12,
            \\"date\\": \\"1987-10-11T23:00:00.000Z\\"
          },
          {
            \\"day\\": 13,
            \\"date\\": \\"1987-10-12T23:00:00.000Z\\"
          },
          {
            \\"day\\": 14,
            \\"date\\": \\"1987-10-13T23:00:00.000Z\\"
          },
          {
            \\"day\\": 15,
            \\"date\\": \\"1987-10-14T23:00:00.000Z\\"
          },
          {
            \\"day\\": 16,
            \\"date\\": \\"1987-10-15T23:00:00.000Z\\"
          },
          {
            \\"day\\": 17,
            \\"date\\": \\"1987-10-16T23:00:00.000Z\\"
          },
          {
            \\"day\\": 18,
            \\"date\\": \\"1987-10-17T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 19,
            \\"date\\": \\"1987-10-18T23:00:00.000Z\\"
          },
          {
            \\"day\\": 20,
            \\"date\\": \\"1987-10-19T23:00:00.000Z\\"
          },
          {
            \\"day\\": 21,
            \\"date\\": \\"1987-10-20T23:00:00.000Z\\"
          },
          {
            \\"day\\": 22,
            \\"date\\": \\"1987-10-21T23:00:00.000Z\\"
          },
          {
            \\"day\\": 23,
            \\"date\\": \\"1987-10-22T23:00:00.000Z\\"
          },
          {
            \\"day\\": 24,
            \\"date\\": \\"1987-10-23T23:00:00.000Z\\"
          },
          {
            \\"day\\": 25,
            \\"date\\": \\"1987-10-24T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 26,
            \\"date\\": \\"1987-10-26T00:00:00.000Z\\"
          },
          {
            \\"day\\": 27,
            \\"date\\": \\"1987-10-27T00:00:00.000Z\\"
          },
          {
            \\"day\\": 28,
            \\"date\\": \\"1987-10-28T00:00:00.000Z\\"
          },
          {
            \\"day\\": 29,
            \\"date\\": \\"1987-10-29T00:00:00.000Z\\"
          },
          {
            \\"day\\": 30,
            \\"date\\": \\"1987-10-30T00:00:00.000Z\\"
          },
          {
            \\"day\\": 31,
            \\"date\\": \\"1987-10-31T00:00:00.000Z\\"
          },
          {}
        ]
      ]
    }
  ],
  \\"currentMonth\\": 9,
  \\"currentYear\\": 1987,
  \\"selectedDate\\": \\"2020-10-15T23:00:00.000Z\\"
}"
`;

exports[`Decrement month should return the correct data structure 1`] = `
"{
  \\"months\\": [
    {
      \\"currentMonth\\": 10,
      \\"currentYear\\": 2020,
      \\"weeks\\": [
        [
          {},
          {},
          {},
          {},
          {},
          {},
          {
            \\"day\\": 1,
            \\"date\\": \\"2020-11-01T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 2,
            \\"date\\": \\"2020-11-02T00:00:00.000Z\\"
          },
          {
            \\"day\\": 3,
            \\"date\\": \\"2020-11-03T00:00:00.000Z\\"
          },
          {
            \\"day\\": 4,
            \\"date\\": \\"2020-11-04T00:00:00.000Z\\"
          },
          {
            \\"day\\": 5,
            \\"date\\": \\"2020-11-05T00:00:00.000Z\\"
          },
          {
            \\"day\\": 6,
            \\"date\\": \\"2020-11-06T00:00:00.000Z\\"
          },
          {
            \\"day\\": 7,
            \\"date\\": \\"2020-11-07T00:00:00.000Z\\"
          },
          {
            \\"day\\": 8,
            \\"date\\": \\"2020-11-08T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 9,
            \\"date\\": \\"2020-11-09T00:00:00.000Z\\"
          },
          {
            \\"day\\": 10,
            \\"date\\": \\"2020-11-10T00:00:00.000Z\\"
          },
          {
            \\"day\\": 11,
            \\"date\\": \\"2020-11-11T00:00:00.000Z\\"
          },
          {
            \\"day\\": 12,
            \\"date\\": \\"2020-11-12T00:00:00.000Z\\"
          },
          {
            \\"day\\": 13,
            \\"date\\": \\"2020-11-13T00:00:00.000Z\\"
          },
          {
            \\"day\\": 14,
            \\"date\\": \\"2020-11-14T00:00:00.000Z\\"
          },
          {
            \\"day\\": 15,
            \\"date\\": \\"2020-11-15T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 16,
            \\"date\\": \\"2020-11-16T00:00:00.000Z\\"
          },
          {
            \\"day\\": 17,
            \\"date\\": \\"2020-11-17T00:00:00.000Z\\"
          },
          {
            \\"day\\": 18,
            \\"date\\": \\"2020-11-18T00:00:00.000Z\\"
          },
          {
            \\"day\\": 19,
            \\"date\\": \\"2020-11-19T00:00:00.000Z\\"
          },
          {
            \\"day\\": 20,
            \\"date\\": \\"2020-11-20T00:00:00.000Z\\"
          },
          {
            \\"day\\": 21,
            \\"date\\": \\"2020-11-21T00:00:00.000Z\\"
          },
          {
            \\"day\\": 22,
            \\"date\\": \\"2020-11-22T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 23,
            \\"date\\": \\"2020-11-23T00:00:00.000Z\\"
          },
          {
            \\"day\\": 24,
            \\"date\\": \\"2020-11-24T00:00:00.000Z\\"
          },
          {
            \\"day\\": 25,
            \\"date\\": \\"2020-11-25T00:00:00.000Z\\"
          },
          {
            \\"day\\": 26,
            \\"date\\": \\"2020-11-26T00:00:00.000Z\\"
          },
          {
            \\"day\\": 27,
            \\"date\\": \\"2020-11-27T00:00:00.000Z\\"
          },
          {
            \\"day\\": 28,
            \\"date\\": \\"2020-11-28T00:00:00.000Z\\"
          },
          {
            \\"day\\": 29,
            \\"date\\": \\"2020-11-29T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 30,
            \\"date\\": \\"2020-11-30T00:00:00.000Z\\"
          },
          {},
          {},
          {},
          {},
          {},
          {}
        ]
      ]
    }
  ],
  \\"currentMonth\\": 10,
  \\"currentYear\\": 2020,
  \\"selectedDate\\": \\"2020-10-15T23:00:00.000Z\\"
}"
`;

exports[`Decrement year should return the correct data structure 1`] = `
"{
  \\"months\\": [
    {
      \\"currentMonth\\": 9,
      \\"currentYear\\": 2019,
      \\"weeks\\": [
        [
          {},
          {
            \\"day\\": 1,
            \\"date\\": \\"2019-09-30T23:00:00.000Z\\"
          },
          {
            \\"day\\": 2,
            \\"date\\": \\"2019-10-01T23:00:00.000Z\\"
          },
          {
            \\"day\\": 3,
            \\"date\\": \\"2019-10-02T23:00:00.000Z\\"
          },
          {
            \\"day\\": 4,
            \\"date\\": \\"2019-10-03T23:00:00.000Z\\"
          },
          {
            \\"day\\": 5,
            \\"date\\": \\"2019-10-04T23:00:00.000Z\\"
          },
          {
            \\"day\\": 6,
            \\"date\\": \\"2019-10-05T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 7,
            \\"date\\": \\"2019-10-06T23:00:00.000Z\\"
          },
          {
            \\"day\\": 8,
            \\"date\\": \\"2019-10-07T23:00:00.000Z\\"
          },
          {
            \\"day\\": 9,
            \\"date\\": \\"2019-10-08T23:00:00.000Z\\"
          },
          {
            \\"day\\": 10,
            \\"date\\": \\"2019-10-09T23:00:00.000Z\\"
          },
          {
            \\"day\\": 11,
            \\"date\\": \\"2019-10-10T23:00:00.000Z\\"
          },
          {
            \\"day\\": 12,
            \\"date\\": \\"2019-10-11T23:00:00.000Z\\"
          },
          {
            \\"day\\": 13,
            \\"date\\": \\"2019-10-12T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 14,
            \\"date\\": \\"2019-10-13T23:00:00.000Z\\"
          },
          {
            \\"day\\": 15,
            \\"date\\": \\"2019-10-14T23:00:00.000Z\\"
          },
          {
            \\"day\\": 16,
            \\"date\\": \\"2019-10-15T23:00:00.000Z\\"
          },
          {
            \\"day\\": 17,
            \\"date\\": \\"2019-10-16T23:00:00.000Z\\"
          },
          {
            \\"day\\": 18,
            \\"date\\": \\"2019-10-17T23:00:00.000Z\\"
          },
          {
            \\"day\\": 19,
            \\"date\\": \\"2019-10-18T23:00:00.000Z\\"
          },
          {
            \\"day\\": 20,
            \\"date\\": \\"2019-10-19T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 21,
            \\"date\\": \\"2019-10-20T23:00:00.000Z\\"
          },
          {
            \\"day\\": 22,
            \\"date\\": \\"2019-10-21T23:00:00.000Z\\"
          },
          {
            \\"day\\": 23,
            \\"date\\": \\"2019-10-22T23:00:00.000Z\\"
          },
          {
            \\"day\\": 24,
            \\"date\\": \\"2019-10-23T23:00:00.000Z\\"
          },
          {
            \\"day\\": 25,
            \\"date\\": \\"2019-10-24T23:00:00.000Z\\"
          },
          {
            \\"day\\": 26,
            \\"date\\": \\"2019-10-25T23:00:00.000Z\\"
          },
          {
            \\"day\\": 27,
            \\"date\\": \\"2019-10-26T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 28,
            \\"date\\": \\"2019-10-28T00:00:00.000Z\\"
          },
          {
            \\"day\\": 29,
            \\"date\\": \\"2019-10-29T00:00:00.000Z\\"
          },
          {
            \\"day\\": 30,
            \\"date\\": \\"2019-10-30T00:00:00.000Z\\"
          },
          {
            \\"day\\": 31,
            \\"date\\": \\"2019-10-31T00:00:00.000Z\\"
          },
          {},
          {},
          {}
        ]
      ]
    }
  ],
  \\"currentMonth\\": 9,
  \\"currentYear\\": 2019,
  \\"selectedDate\\": \\"2020-10-15T23:00:00.000Z\\"
}"
`;

exports[`Increment month should return the correct data structure 1`] = `
"{
  \\"months\\": [
    {
      \\"currentMonth\\": 10,
      \\"currentYear\\": 2020,
      \\"weeks\\": [
        [
          {},
          {},
          {},
          {},
          {},
          {},
          {
            \\"day\\": 1,
            \\"date\\": \\"2020-11-01T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 2,
            \\"date\\": \\"2020-11-02T00:00:00.000Z\\"
          },
          {
            \\"day\\": 3,
            \\"date\\": \\"2020-11-03T00:00:00.000Z\\"
          },
          {
            \\"day\\": 4,
            \\"date\\": \\"2020-11-04T00:00:00.000Z\\"
          },
          {
            \\"day\\": 5,
            \\"date\\": \\"2020-11-05T00:00:00.000Z\\"
          },
          {
            \\"day\\": 6,
            \\"date\\": \\"2020-11-06T00:00:00.000Z\\"
          },
          {
            \\"day\\": 7,
            \\"date\\": \\"2020-11-07T00:00:00.000Z\\"
          },
          {
            \\"day\\": 8,
            \\"date\\": \\"2020-11-08T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 9,
            \\"date\\": \\"2020-11-09T00:00:00.000Z\\"
          },
          {
            \\"day\\": 10,
            \\"date\\": \\"2020-11-10T00:00:00.000Z\\"
          },
          {
            \\"day\\": 11,
            \\"date\\": \\"2020-11-11T00:00:00.000Z\\"
          },
          {
            \\"day\\": 12,
            \\"date\\": \\"2020-11-12T00:00:00.000Z\\"
          },
          {
            \\"day\\": 13,
            \\"date\\": \\"2020-11-13T00:00:00.000Z\\"
          },
          {
            \\"day\\": 14,
            \\"date\\": \\"2020-11-14T00:00:00.000Z\\"
          },
          {
            \\"day\\": 15,
            \\"date\\": \\"2020-11-15T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 16,
            \\"date\\": \\"2020-11-16T00:00:00.000Z\\"
          },
          {
            \\"day\\": 17,
            \\"date\\": \\"2020-11-17T00:00:00.000Z\\"
          },
          {
            \\"day\\": 18,
            \\"date\\": \\"2020-11-18T00:00:00.000Z\\"
          },
          {
            \\"day\\": 19,
            \\"date\\": \\"2020-11-19T00:00:00.000Z\\"
          },
          {
            \\"day\\": 20,
            \\"date\\": \\"2020-11-20T00:00:00.000Z\\"
          },
          {
            \\"day\\": 21,
            \\"date\\": \\"2020-11-21T00:00:00.000Z\\"
          },
          {
            \\"day\\": 22,
            \\"date\\": \\"2020-11-22T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 23,
            \\"date\\": \\"2020-11-23T00:00:00.000Z\\"
          },
          {
            \\"day\\": 24,
            \\"date\\": \\"2020-11-24T00:00:00.000Z\\"
          },
          {
            \\"day\\": 25,
            \\"date\\": \\"2020-11-25T00:00:00.000Z\\"
          },
          {
            \\"day\\": 26,
            \\"date\\": \\"2020-11-26T00:00:00.000Z\\"
          },
          {
            \\"day\\": 27,
            \\"date\\": \\"2020-11-27T00:00:00.000Z\\"
          },
          {
            \\"day\\": 28,
            \\"date\\": \\"2020-11-28T00:00:00.000Z\\"
          },
          {
            \\"day\\": 29,
            \\"date\\": \\"2020-11-29T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 30,
            \\"date\\": \\"2020-11-30T00:00:00.000Z\\"
          },
          {},
          {},
          {},
          {},
          {},
          {}
        ]
      ]
    }
  ],
  \\"currentMonth\\": 10,
  \\"currentYear\\": 2020,
  \\"selectedDate\\": \\"2020-10-15T23:00:00.000Z\\"
}"
`;

exports[`Increment year should return the correct data structure 1`] = `
"{
  \\"months\\": [
    {
      \\"currentMonth\\": 9,
      \\"currentYear\\": 2021,
      \\"weeks\\": [
        [
          {},
          {},
          {},
          {},
          {
            \\"day\\": 1,
            \\"date\\": \\"2021-09-30T23:00:00.000Z\\"
          },
          {
            \\"day\\": 2,
            \\"date\\": \\"2021-10-01T23:00:00.000Z\\"
          },
          {
            \\"day\\": 3,
            \\"date\\": \\"2021-10-02T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 4,
            \\"date\\": \\"2021-10-03T23:00:00.000Z\\"
          },
          {
            \\"day\\": 5,
            \\"date\\": \\"2021-10-04T23:00:00.000Z\\"
          },
          {
            \\"day\\": 6,
            \\"date\\": \\"2021-10-05T23:00:00.000Z\\"
          },
          {
            \\"day\\": 7,
            \\"date\\": \\"2021-10-06T23:00:00.000Z\\"
          },
          {
            \\"day\\": 8,
            \\"date\\": \\"2021-10-07T23:00:00.000Z\\"
          },
          {
            \\"day\\": 9,
            \\"date\\": \\"2021-10-08T23:00:00.000Z\\"
          },
          {
            \\"day\\": 10,
            \\"date\\": \\"2021-10-09T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 11,
            \\"date\\": \\"2021-10-10T23:00:00.000Z\\"
          },
          {
            \\"day\\": 12,
            \\"date\\": \\"2021-10-11T23:00:00.000Z\\"
          },
          {
            \\"day\\": 13,
            \\"date\\": \\"2021-10-12T23:00:00.000Z\\"
          },
          {
            \\"day\\": 14,
            \\"date\\": \\"2021-10-13T23:00:00.000Z\\"
          },
          {
            \\"day\\": 15,
            \\"date\\": \\"2021-10-14T23:00:00.000Z\\"
          },
          {
            \\"day\\": 16,
            \\"date\\": \\"2021-10-15T23:00:00.000Z\\"
          },
          {
            \\"day\\": 17,
            \\"date\\": \\"2021-10-16T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 18,
            \\"date\\": \\"2021-10-17T23:00:00.000Z\\"
          },
          {
            \\"day\\": 19,
            \\"date\\": \\"2021-10-18T23:00:00.000Z\\"
          },
          {
            \\"day\\": 20,
            \\"date\\": \\"2021-10-19T23:00:00.000Z\\"
          },
          {
            \\"day\\": 21,
            \\"date\\": \\"2021-10-20T23:00:00.000Z\\"
          },
          {
            \\"day\\": 22,
            \\"date\\": \\"2021-10-21T23:00:00.000Z\\"
          },
          {
            \\"day\\": 23,
            \\"date\\": \\"2021-10-22T23:00:00.000Z\\"
          },
          {
            \\"day\\": 24,
            \\"date\\": \\"2021-10-23T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 25,
            \\"date\\": \\"2021-10-24T23:00:00.000Z\\"
          },
          {
            \\"day\\": 26,
            \\"date\\": \\"2021-10-25T23:00:00.000Z\\"
          },
          {
            \\"day\\": 27,
            \\"date\\": \\"2021-10-26T23:00:00.000Z\\"
          },
          {
            \\"day\\": 28,
            \\"date\\": \\"2021-10-27T23:00:00.000Z\\"
          },
          {
            \\"day\\": 29,
            \\"date\\": \\"2021-10-28T23:00:00.000Z\\"
          },
          {
            \\"day\\": 30,
            \\"date\\": \\"2021-10-29T23:00:00.000Z\\"
          },
          {
            \\"day\\": 31,
            \\"date\\": \\"2021-10-30T23:00:00.000Z\\"
          }
        ]
      ]
    }
  ],
  \\"currentMonth\\": 9,
  \\"currentYear\\": 2021,
  \\"selectedDate\\": \\"2020-10-15T23:00:00.000Z\\"
}"
`;

exports[`Initialising useAtomicDatepicker should return the correct data structure 1`] = `
"{
  \\"months\\": [
    {
      \\"currentMonth\\": 9,
      \\"currentYear\\": 2020,
      \\"weeks\\": [
        [
          {},
          {},
          {},
          {
            \\"day\\": 1,
            \\"date\\": \\"2020-09-30T23:00:00.000Z\\"
          },
          {
            \\"day\\": 2,
            \\"date\\": \\"2020-10-01T23:00:00.000Z\\"
          },
          {
            \\"day\\": 3,
            \\"date\\": \\"2020-10-02T23:00:00.000Z\\"
          },
          {
            \\"day\\": 4,
            \\"date\\": \\"2020-10-03T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 5,
            \\"date\\": \\"2020-10-04T23:00:00.000Z\\"
          },
          {
            \\"day\\": 6,
            \\"date\\": \\"2020-10-05T23:00:00.000Z\\"
          },
          {
            \\"day\\": 7,
            \\"date\\": \\"2020-10-06T23:00:00.000Z\\"
          },
          {
            \\"day\\": 8,
            \\"date\\": \\"2020-10-07T23:00:00.000Z\\"
          },
          {
            \\"day\\": 9,
            \\"date\\": \\"2020-10-08T23:00:00.000Z\\"
          },
          {
            \\"day\\": 10,
            \\"date\\": \\"2020-10-09T23:00:00.000Z\\"
          },
          {
            \\"day\\": 11,
            \\"date\\": \\"2020-10-10T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 12,
            \\"date\\": \\"2020-10-11T23:00:00.000Z\\"
          },
          {
            \\"day\\": 13,
            \\"date\\": \\"2020-10-12T23:00:00.000Z\\"
          },
          {
            \\"day\\": 14,
            \\"date\\": \\"2020-10-13T23:00:00.000Z\\"
          },
          {
            \\"day\\": 15,
            \\"date\\": \\"2020-10-14T23:00:00.000Z\\"
          },
          {
            \\"day\\": 16,
            \\"date\\": \\"2020-10-15T23:00:00.000Z\\"
          },
          {
            \\"day\\": 17,
            \\"date\\": \\"2020-10-16T23:00:00.000Z\\"
          },
          {
            \\"day\\": 18,
            \\"date\\": \\"2020-10-17T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 19,
            \\"date\\": \\"2020-10-18T23:00:00.000Z\\"
          },
          {
            \\"day\\": 20,
            \\"date\\": \\"2020-10-19T23:00:00.000Z\\"
          },
          {
            \\"day\\": 21,
            \\"date\\": \\"2020-10-20T23:00:00.000Z\\"
          },
          {
            \\"day\\": 22,
            \\"date\\": \\"2020-10-21T23:00:00.000Z\\"
          },
          {
            \\"day\\": 23,
            \\"date\\": \\"2020-10-22T23:00:00.000Z\\"
          },
          {
            \\"day\\": 24,
            \\"date\\": \\"2020-10-23T23:00:00.000Z\\"
          },
          {
            \\"day\\": 25,
            \\"date\\": \\"2020-10-24T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 26,
            \\"date\\": \\"2020-10-26T00:00:00.000Z\\"
          },
          {
            \\"day\\": 27,
            \\"date\\": \\"2020-10-27T00:00:00.000Z\\"
          },
          {
            \\"day\\": 28,
            \\"date\\": \\"2020-10-28T00:00:00.000Z\\"
          },
          {
            \\"day\\": 29,
            \\"date\\": \\"2020-10-29T00:00:00.000Z\\"
          },
          {
            \\"day\\": 30,
            \\"date\\": \\"2020-10-30T00:00:00.000Z\\"
          },
          {
            \\"day\\": 31,
            \\"date\\": \\"2020-10-31T00:00:00.000Z\\"
          },
          {}
        ]
      ]
    }
  ],
  \\"currentMonth\\": 9,
  \\"currentYear\\": 2020,
  \\"selectedDate\\": \\"2020-10-15T23:00:00.000Z\\"
}"
`;

exports[`Multiple months should return the correct data structure 1`] = `
"{
  \\"months\\": [
    {
      \\"currentMonth\\": 9,
      \\"currentYear\\": 2020,
      \\"weeks\\": [
        [
          {},
          {},
          {},
          {
            \\"day\\": 1,
            \\"date\\": \\"2020-09-30T23:00:00.000Z\\"
          },
          {
            \\"day\\": 2,
            \\"date\\": \\"2020-10-01T23:00:00.000Z\\"
          },
          {
            \\"day\\": 3,
            \\"date\\": \\"2020-10-02T23:00:00.000Z\\"
          },
          {
            \\"day\\": 4,
            \\"date\\": \\"2020-10-03T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 5,
            \\"date\\": \\"2020-10-04T23:00:00.000Z\\"
          },
          {
            \\"day\\": 6,
            \\"date\\": \\"2020-10-05T23:00:00.000Z\\"
          },
          {
            \\"day\\": 7,
            \\"date\\": \\"2020-10-06T23:00:00.000Z\\"
          },
          {
            \\"day\\": 8,
            \\"date\\": \\"2020-10-07T23:00:00.000Z\\"
          },
          {
            \\"day\\": 9,
            \\"date\\": \\"2020-10-08T23:00:00.000Z\\"
          },
          {
            \\"day\\": 10,
            \\"date\\": \\"2020-10-09T23:00:00.000Z\\"
          },
          {
            \\"day\\": 11,
            \\"date\\": \\"2020-10-10T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 12,
            \\"date\\": \\"2020-10-11T23:00:00.000Z\\"
          },
          {
            \\"day\\": 13,
            \\"date\\": \\"2020-10-12T23:00:00.000Z\\"
          },
          {
            \\"day\\": 14,
            \\"date\\": \\"2020-10-13T23:00:00.000Z\\"
          },
          {
            \\"day\\": 15,
            \\"date\\": \\"2020-10-14T23:00:00.000Z\\"
          },
          {
            \\"day\\": 16,
            \\"date\\": \\"2020-10-15T23:00:00.000Z\\"
          },
          {
            \\"day\\": 17,
            \\"date\\": \\"2020-10-16T23:00:00.000Z\\"
          },
          {
            \\"day\\": 18,
            \\"date\\": \\"2020-10-17T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 19,
            \\"date\\": \\"2020-10-18T23:00:00.000Z\\"
          },
          {
            \\"day\\": 20,
            \\"date\\": \\"2020-10-19T23:00:00.000Z\\"
          },
          {
            \\"day\\": 21,
            \\"date\\": \\"2020-10-20T23:00:00.000Z\\"
          },
          {
            \\"day\\": 22,
            \\"date\\": \\"2020-10-21T23:00:00.000Z\\"
          },
          {
            \\"day\\": 23,
            \\"date\\": \\"2020-10-22T23:00:00.000Z\\"
          },
          {
            \\"day\\": 24,
            \\"date\\": \\"2020-10-23T23:00:00.000Z\\"
          },
          {
            \\"day\\": 25,
            \\"date\\": \\"2020-10-24T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 26,
            \\"date\\": \\"2020-10-26T00:00:00.000Z\\"
          },
          {
            \\"day\\": 27,
            \\"date\\": \\"2020-10-27T00:00:00.000Z\\"
          },
          {
            \\"day\\": 28,
            \\"date\\": \\"2020-10-28T00:00:00.000Z\\"
          },
          {
            \\"day\\": 29,
            \\"date\\": \\"2020-10-29T00:00:00.000Z\\"
          },
          {
            \\"day\\": 30,
            \\"date\\": \\"2020-10-30T00:00:00.000Z\\"
          },
          {
            \\"day\\": 31,
            \\"date\\": \\"2020-10-31T00:00:00.000Z\\"
          },
          {}
        ]
      ]
    },
    {
      \\"currentMonth\\": 10,
      \\"currentYear\\": 2020,
      \\"weeks\\": [
        [
          {},
          {},
          {},
          {},
          {},
          {},
          {
            \\"day\\": 1,
            \\"date\\": \\"2020-11-01T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 2,
            \\"date\\": \\"2020-11-02T00:00:00.000Z\\"
          },
          {
            \\"day\\": 3,
            \\"date\\": \\"2020-11-03T00:00:00.000Z\\"
          },
          {
            \\"day\\": 4,
            \\"date\\": \\"2020-11-04T00:00:00.000Z\\"
          },
          {
            \\"day\\": 5,
            \\"date\\": \\"2020-11-05T00:00:00.000Z\\"
          },
          {
            \\"day\\": 6,
            \\"date\\": \\"2020-11-06T00:00:00.000Z\\"
          },
          {
            \\"day\\": 7,
            \\"date\\": \\"2020-11-07T00:00:00.000Z\\"
          },
          {
            \\"day\\": 8,
            \\"date\\": \\"2020-11-08T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 9,
            \\"date\\": \\"2020-11-09T00:00:00.000Z\\"
          },
          {
            \\"day\\": 10,
            \\"date\\": \\"2020-11-10T00:00:00.000Z\\"
          },
          {
            \\"day\\": 11,
            \\"date\\": \\"2020-11-11T00:00:00.000Z\\"
          },
          {
            \\"day\\": 12,
            \\"date\\": \\"2020-11-12T00:00:00.000Z\\"
          },
          {
            \\"day\\": 13,
            \\"date\\": \\"2020-11-13T00:00:00.000Z\\"
          },
          {
            \\"day\\": 14,
            \\"date\\": \\"2020-11-14T00:00:00.000Z\\"
          },
          {
            \\"day\\": 15,
            \\"date\\": \\"2020-11-15T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 16,
            \\"date\\": \\"2020-11-16T00:00:00.000Z\\"
          },
          {
            \\"day\\": 17,
            \\"date\\": \\"2020-11-17T00:00:00.000Z\\"
          },
          {
            \\"day\\": 18,
            \\"date\\": \\"2020-11-18T00:00:00.000Z\\"
          },
          {
            \\"day\\": 19,
            \\"date\\": \\"2020-11-19T00:00:00.000Z\\"
          },
          {
            \\"day\\": 20,
            \\"date\\": \\"2020-11-20T00:00:00.000Z\\"
          },
          {
            \\"day\\": 21,
            \\"date\\": \\"2020-11-21T00:00:00.000Z\\"
          },
          {
            \\"day\\": 22,
            \\"date\\": \\"2020-11-22T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 23,
            \\"date\\": \\"2020-11-23T00:00:00.000Z\\"
          },
          {
            \\"day\\": 24,
            \\"date\\": \\"2020-11-24T00:00:00.000Z\\"
          },
          {
            \\"day\\": 25,
            \\"date\\": \\"2020-11-25T00:00:00.000Z\\"
          },
          {
            \\"day\\": 26,
            \\"date\\": \\"2020-11-26T00:00:00.000Z\\"
          },
          {
            \\"day\\": 27,
            \\"date\\": \\"2020-11-27T00:00:00.000Z\\"
          },
          {
            \\"day\\": 28,
            \\"date\\": \\"2020-11-28T00:00:00.000Z\\"
          },
          {
            \\"day\\": 29,
            \\"date\\": \\"2020-11-29T00:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 30,
            \\"date\\": \\"2020-11-30T00:00:00.000Z\\"
          },
          {},
          {},
          {},
          {},
          {},
          {}
        ]
      ]
    }
  ],
  \\"currentMonth\\": 9,
  \\"currentYear\\": 2020,
  \\"selectedDate\\": \\"2020-10-15T23:00:00.000Z\\"
}"
`;

exports[`Setting selected date should return the correct data structure 1`] = `
"{
  \\"months\\": [
    {
      \\"currentMonth\\": 7,
      \\"currentYear\\": 2050,
      \\"weeks\\": [
        [
          {
            \\"day\\": 1,
            \\"date\\": \\"2050-07-31T23:00:00.000Z\\"
          },
          {
            \\"day\\": 2,
            \\"date\\": \\"2050-08-01T23:00:00.000Z\\"
          },
          {
            \\"day\\": 3,
            \\"date\\": \\"2050-08-02T23:00:00.000Z\\"
          },
          {
            \\"day\\": 4,
            \\"date\\": \\"2050-08-03T23:00:00.000Z\\"
          },
          {
            \\"day\\": 5,
            \\"date\\": \\"2050-08-04T23:00:00.000Z\\"
          },
          {
            \\"day\\": 6,
            \\"date\\": \\"2050-08-05T23:00:00.000Z\\"
          },
          {
            \\"day\\": 7,
            \\"date\\": \\"2050-08-06T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 8,
            \\"date\\": \\"2050-08-07T23:00:00.000Z\\"
          },
          {
            \\"day\\": 9,
            \\"date\\": \\"2050-08-08T23:00:00.000Z\\"
          },
          {
            \\"day\\": 10,
            \\"date\\": \\"2050-08-09T23:00:00.000Z\\"
          },
          {
            \\"day\\": 11,
            \\"date\\": \\"2050-08-10T23:00:00.000Z\\"
          },
          {
            \\"day\\": 12,
            \\"date\\": \\"2050-08-11T23:00:00.000Z\\"
          },
          {
            \\"day\\": 13,
            \\"date\\": \\"2050-08-12T23:00:00.000Z\\"
          },
          {
            \\"day\\": 14,
            \\"date\\": \\"2050-08-13T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 15,
            \\"date\\": \\"2050-08-14T23:00:00.000Z\\"
          },
          {
            \\"day\\": 16,
            \\"date\\": \\"2050-08-15T23:00:00.000Z\\"
          },
          {
            \\"day\\": 17,
            \\"date\\": \\"2050-08-16T23:00:00.000Z\\"
          },
          {
            \\"day\\": 18,
            \\"date\\": \\"2050-08-17T23:00:00.000Z\\"
          },
          {
            \\"day\\": 19,
            \\"date\\": \\"2050-08-18T23:00:00.000Z\\"
          },
          {
            \\"day\\": 20,
            \\"date\\": \\"2050-08-19T23:00:00.000Z\\"
          },
          {
            \\"day\\": 21,
            \\"date\\": \\"2050-08-20T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 22,
            \\"date\\": \\"2050-08-21T23:00:00.000Z\\"
          },
          {
            \\"day\\": 23,
            \\"date\\": \\"2050-08-22T23:00:00.000Z\\"
          },
          {
            \\"day\\": 24,
            \\"date\\": \\"2050-08-23T23:00:00.000Z\\"
          },
          {
            \\"day\\": 25,
            \\"date\\": \\"2050-08-24T23:00:00.000Z\\"
          },
          {
            \\"day\\": 26,
            \\"date\\": \\"2050-08-25T23:00:00.000Z\\"
          },
          {
            \\"day\\": 27,
            \\"date\\": \\"2050-08-26T23:00:00.000Z\\"
          },
          {
            \\"day\\": 28,
            \\"date\\": \\"2050-08-27T23:00:00.000Z\\"
          }
        ],
        [
          {
            \\"day\\": 29,
            \\"date\\": \\"2050-08-28T23:00:00.000Z\\"
          },
          {
            \\"day\\": 30,
            \\"date\\": \\"2050-08-29T23:00:00.000Z\\"
          },
          {
            \\"day\\": 31,
            \\"date\\": \\"2050-08-30T23:00:00.000Z\\"
          },
          {},
          {},
          {},
          {}
        ]
      ]
    }
  ],
  \\"currentMonth\\": 7,
  \\"currentYear\\": 2050,
  \\"selectedDate\\": \\"2050-08-28T00:00:00.000Z\\"
}"
`;
